refactor: Make the code more organized

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -73,12 +73,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 3min 30s per loop\n"
+      "1 loop, best of 1: 2min 20s per loop\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
+    "%%timeit -r 1\n",
     "%run extract-sample-data.py"
    ]
   },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        " 'way': 12337}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "{'lower': 20677, 'lower_colon': 31308, 'other': 15891, 'problemchars': 0}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,47 +228,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "defaultdict(set,\n",
-       "            {'14': {'U.S. 14'},\n",
-       "             'Ave': {'Alabama Ave', 'New York Ave'},\n",
-       "             'Ave.': {'Ogden Ave.'},\n",
-       "             'B': {'South Avenue B'},\n",
-       "             'C': {'South Avenue C'},\n",
-       "             'C405': {'S Williams St #C405'},\n",
-       "             'Circle': {'Woodland Park Circle'},\n",
-       "             'Ct': {'Boulder Ct', 'Timber Ct', 'Vail Ct'},\n",
-       "             'Dr': {'Breckenridge Dr',\n",
-       "              'Greenbriar Dr',\n",
-       "              'Gregory M Sears Dr',\n",
-       "              'John M Boor Dr',\n",
-       "              'Summit Dr'},\n",
-       "             'E': {'South Avenue E'},\n",
-       "             'F': {'South Avenue F'},\n",
-       "             'G': {'South Avenue G'},\n",
-       "             'H': {'South Avenue H'},\n",
-       "             'J': {'South Avenue J'},\n",
-       "             'L': {'South Avenue L'},\n",
-       "             'Ln': {'Leadville Ln'},\n",
-       "             'M': {'South Avenue M'},\n",
-       "             'N': {'900 N', 'South Avenue N'},\n",
-       "             'O': {'South Avenue O'},\n",
-       "             'Park': {'West Midway Park'},\n",
-       "             'St': {'Kathleen St', 'Tipperary St', 'Towne St'}})"
-      ]
-     },
-     "execution_count": 178,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:File `'update-v-value.py'` not found.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'audit' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-ecd0bbb7e5a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m            'Park', 'Path', 'Terrace', 'West', 'Highway']\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0maudit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"addr:street\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstreet_type_re\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'audit' is not defined"
+     ]
     }
    ],
    "source": [
-    "%run update-v-value.py\n",
+    "%run \n",
     "\n",
     "street_type_re = re.compile(r'\\b\\S+\\.?$', re.IGNORECASE)\n",
     "expected = ['Street', 'Avenue', 'Boulevard', 'Drive', 'Court', 'Place',\n",
