--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -33,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
@@ -45,7 +43,8 @@
     "import xml.etree.cElementTree as ET\n",
     "import lxml\n",
     "import cerberus\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "import sqlite3"
    ]
   },
   {
@@ -232,26 +231,43 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:File `'update-v-value.py'` not found.\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'audit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-ecd0bbb7e5a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m            'Park', 'Path', 'Terrace', 'West', 'Highway']\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0maudit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"addr:street\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstreet_type_re\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpected\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'audit' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "defaultdict(set,\n",
+       "            {'14': {'U.S. 14'},\n",
+       "             'Ave': {'Alabama Ave', 'New York Ave'},\n",
+       "             'Ave.': {'Ogden Ave.'},\n",
+       "             'B': {'South Avenue B'},\n",
+       "             'C': {'South Avenue C'},\n",
+       "             'C405': {'S Williams St #C405'},\n",
+       "             'Circle': {'Woodland Park Circle'},\n",
+       "             'Ct': {'Boulder Ct', 'Timber Ct', 'Vail Ct'},\n",
+       "             'Dr': {'Breckenridge Dr',\n",
+       "              'Greenbriar Dr',\n",
+       "              'Gregory M Sears Dr',\n",
+       "              'John M Boor Dr',\n",
+       "              'Summit Dr'},\n",
+       "             'E': {'South Avenue E'},\n",
+       "             'F': {'South Avenue F'},\n",
+       "             'G': {'South Avenue G'},\n",
+       "             'H': {'South Avenue H'},\n",
+       "             'J': {'South Avenue J'},\n",
+       "             'L': {'South Avenue L'},\n",
+       "             'Ln': {'Leadville Ln'},\n",
+       "             'M': {'South Avenue M'},\n",
+       "             'N': {'900 N', 'South Avenue N'},\n",
+       "             'O': {'South Avenue O'},\n",
+       "             'Park': {'West Midway Park'},\n",
+       "             'St': {'Kathleen St', 'Tipperary St', 'Towne St'}})"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%run \n",
+    "%run audit-v-value.py\n",
     "\n",
     "street_type_re = re.compile(r'\\b\\S+\\.?$', re.IGNORECASE)\n",
     "expected = ['Street', 'Avenue', 'Boulevard', 'Drive', 'Court', 'Place',\n",
@@ -263,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -278,14 +294,12 @@
        "             '219-988-2111': {'+1 219-988-2111'}})"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%run update-v-value.py\n",
-    "\n",
     "phone_type_re = re.compile(r'(\\+1-)?\\(?\\d\\d\\d\\)?[-| ]?\\d\\d\\d[-| ]?\\d\\d\\d\\d')\n",
     "expected = re.compile(r'^\\d\\d\\d-\\d\\d\\d-\\d\\d\\d\\d$')\n",
     "\n",
@@ -309,13 +323,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run audit-v-value.py\n",
+    "%run generate-csv-file.py\n",
     "\n",
-    "process_map(sample_file)"
+    "process_map(sample_file, validate=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create the database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run create-database.py"
    ]
   },
   {
@@ -330,21 +360,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:python2]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-python2-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
