feat: Run the function within query_func.py

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import csv\n",
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +326,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%run generate-csv-file.py\n",
@@ -340,12 +344,265 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "After generating the csv files we need, it is time to transfer the csv files into a sqlite database. The shcema of this database is stored in schema.py file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%run create-database.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After creating the database, we can start the query and find some interesting facts within this database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect('osm_chicago.db')\n",
+    "c = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "I am a big foodie, so I am very interested in the restaurant in Chicago. First I want to know how many restaurants per cuisince type in the sample .osm file I generated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cuisine_number(cursor):\n",
+    "    '''\n",
+    "    This function will return the # of restaurants of each cuisine types\n",
+    "    within the osm database\n",
+    "    '''\n",
+    "    Q = '''\n",
+    "    SELECT value, COUNT (DISTINCT(id))\n",
+    "    FROM nodes_tags\n",
+    "    WHERE key = 'cuisine'\n",
+    "    GROUP BY value\n",
+    "    ORDER BY 2 DESC\n",
+    "    '''\n",
+    "\n",
+    "    return cursor.execute(Q).fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cuisine_number(c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It actually looks a little big weird. Based on my experience, Chicago has way more restaurants than this. Let's check the total number of restaurant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def num_restaurant(cursor):\n",
+    "    '''\n",
+    "    This function will return the total number of restaurants\n",
+    "    within the database\n",
+    "    '''\n",
+    "    QUERY = '''\n",
+    "    SELECT COUNT (DISTINCT(id)) FROM nodes_tags\n",
+    "    WHERE nodes_tags.value = 'restaurant';\n",
+    "    '''\n",
+    "\n",
+    "    results = cursor.execute(QUERY).fetchall()\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(17,)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_restaurant(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the analysis above, not all the restaurants in the map has showed their cuisine types. Therefore, the two amounts are not the same. But I still doubt about the total number of restaurants. Let's do a quick analysis of the postcode for each cuisine type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cuisine_location(cursor, cuisine_type):\n",
+    "    '''\n",
+    "    This function will return the postcode and the cuisine type\n",
+    "    '''\n",
+    "    QUERY = '''\n",
+    "    SELECT nodes_tags.value, COUNT(*)\n",
+    "    FROM nodes_tags\n",
+    "    JOIN\n",
+    "        (SELECT DISTINCT (id) FROM nodes_tags\n",
+    "        WHERE key = 'cuisine' AND value = \"{}\") as second_nodes_tags\n",
+    "    ON nodes_tags.id = second_nodes_tags.id\n",
+    "    WHERE nodes_tags.key = 'postcode'\n",
+    "    GROUP BY 1\n",
+    "    ORDER BY 2 DESC;\n",
+    "    '''.format(cuisine_type)\n",
+    "\n",
+    "    results = cursor.execute(QUERY).fetchall()\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(u'60616', 1)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cuisine_location(c, 'japanese')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cuisine_location(c, 'mexican')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mexican cuisine shows zero, but it shows 1 in the above analysis. This could mean the postcode is missing for the mexican restaurants. Let's check it out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def cuisine_wo_code(cursor, cuisine_type):\n",
+    "    '''\n",
+    "    This function will return the id and # of restaurants that\n",
+    "    don't have a postcode.\n",
+    "    '''\n",
+    "    Q = '''\n",
+    "    SELECT nodes_tags.id, nodes_tags.value\n",
+    "    FROM nodes_tags\n",
+    "    WHERE (id NOT IN\n",
+    "        (SELECT DISTINCT(id) FROM nodes_tags\n",
+    "        WHERE key = 'postcode'))\n",
+    "    AND (key = 'cuisine')\n",
+    "    AND (value = \"{}\")\n",
+    "    '''.format(cuisine_type)\n",
+    "\n",
+    "    results = cursor.execute(Q).fetchall()\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1317827223, u'mexican')]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cuisine_wo_code(c, 'mexican')"
    ]
   },
   {
