feat: Add some simple overview query

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -365,12 +365,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After creating the database, we can start the query and find some interesting facts within this database."
+    "## Data Overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After creating the database, we can start the query and find some interesting facts within this database. Let's do some simple query to get an overview of this dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -378,6 +385,108 @@
    "source": [
     "conn = sqlite3.connect('osm_chicago.db')\n",
     "c = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(87172,)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q = '''\n",
+    "    SELECT COUNT(*) FROM nodes;\n",
+    "'''\n",
+    "\n",
+    "c.execute(Q).fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of ways"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(12337,)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q = '''\n",
+    "    SELECT COUNT(*) FROM ways;\n",
+    "'''\n",
+    "\n",
+    "c.execute(Q).fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of unique users"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(947,)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q = '''\n",
+    "    SELECT COUNT (DISTINCT(total.uid)) FROM\n",
+    "        (SELECT uid FROM nodes\n",
+    "        UNION ALL SELECT uid FROM ways) total;\n",
+    "'''\n",
+    "\n",
+    "c.execute(Q).fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Detail Exploration"
    ]
   },
   {
@@ -392,7 +501,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def cuisine_number(cursor):\n",
@@ -441,7 +552,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def num_restaurant(cursor):\n",
@@ -488,7 +601,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def cuisine_location(cursor, cuisine_type):\n",
@@ -603,6 +718,24 @@
    ],
    "source": [
     "cuisine_wo_code(c, 'mexican')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Conclusion & Additional Ideas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the auditing process above, I think this is a very cleaned datasets for the purposes of this exercise. A lot of people has made a contribution to achieve it. \n",
+    "\n",
+    "However, this dataset may be incomplete. There is only 17 restaurants within 1% of the total dataset. The sample data is relatively randome, so it shows the whole dataset does not have enough restaurants."
    ]
   },
   {
