docs: Update the documents for conclusion section

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -733,9 +733,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the auditing process above, I think this is a very cleaned datasets for the purposes of this exercise. A lot of people has made a contribution to achieve it. \n",
+    "Based on the auditing process above, I think this is a very cleaned datasets for the purposes of this exercise. A lot of people has made a contribution to achieve it. There are still some improvements can be made.\n",
     "\n",
-    "However, this dataset may be incomplete. There is only 17 restaurants within 1% of the total dataset. The sample data is relatively randome, so it shows the whole dataset does not have enough restaurants."
+    "* The phone number doesn't have a consistent format. Based on the [phone number formatting guide](http://stdcxx.apache.org/doc/stdlibug/26-1.html), since osm is for mapping information around the world, '+1-XXX-XXX-XXXX' can be a good format for US number. The website can put some formatting validation or corrections for better formatting.\n",
+    "* As I mentioned above, this dataset may be incomplete. There is only 17 restaurants within 1% of the total dataset. The sample data is relatively randome, so it shows the whole dataset does not have enough restaurants. It might because not many restaurant owners input their data into the dataset. To better improve the completeness of dataset, there can be some incentives for users to keep contributing to this dataset. For example, getting coupons of a restaurant after gathering the information from that restaurant. :)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are many benefits as well as some potential issues related to the two improvements.\n",
+    "\n",
+    "Make the phone number format consistent\n",
+    "* Benefits:\n",
+    "    * Based on the recommended formatting above, the phone number can show the country code. People can easily see which country does the 'node' belongs to, and can also point out if the country code is correct.\n",
+    "    * People can also see the total number of digits. Therefore, problems with wrong number of digits can be avioded. \n",
+    "* Potential Issues:\n",
+    "    * There are chances that people do not know their country code when inputing the information. They may end up not writing down the number at all.\n",
+    "    * The formatteing suggested are based on US number. Some phone number format, like Chinese phone number, will have a totally different format.\n",
+    "    \n",
+    "Improve the completeness of the map\n",
+    "* Benefits:\n",
+    "    * For a mapping data, completeness can be the most important thing. For a foodie like me, restaurants information is the first thing I want to learn. Incomplete information could frustrate many end-users.\n",
+    "* Potential Issues:\n",
+    "    * The cost to get all the data could be very high. People may not have the incentive to gather all the information needed.\n",
+    "    * It is very hard to measure completeness. \"You don't know what you don't know\". Therefore, we need to set a standard first before diving in the gathering process. Otherwise, it can be a infinit process."
    ]
   }
  ],
