docs: add details for data overview section

--- a/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
+++ b/Wrangle-OpenStreetMap-Data/OpenStreetMap+Project+-+Chicago.ipynb
@@ -376,6 +376,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This project will use the map of a beautiful city, Chicago, IL, United States. I have lived here since graduating from college. I am very interested to see what the map database reveals. After unziping, the total database is a little more than 2GB. Around 950 people contributed to this dataset.\n",
+    "\n",
+    "* Original database: 2.1GB\n",
+    "* Sample: 21MB\n",
+    "* nodes.csv: 7.7MB\n",
+    "* nodes_tags.csv: 131KB\n",
+    "* ways.csv: 803KB\n",
+    "* ways_tags.csv: 2.2MB\n",
+    "* ways_nodes.csv: 2.5MB"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
