--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -131,6 +131,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of Chris training emails: 7936\n",
+      "no. of Sara training emails: 7884\n",
+      "the fitting takes:  211.0 s\n",
+      "the predict:  21.0 s\n",
+      "0.984072810011\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load svm_author_id.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "\"\"\"\n",
+    "    This is the code to accompany the Lesson 2 (SVM) mini-project.\n",
+    "\n",
+    "    Use a SVM to identify emails from the Enron corpus by their authors:\n",
+    "    Sara has label 0\n",
+    "    Chris has label 1\n",
+    "\"\"\"\n",
+    "\n",
+    "import sys\n",
+    "from time import time\n",
+    "sys.path.append(\"../tools/\")\n",
+    "from email_preprocess import preprocess\n",
+    "\n",
+    "\n",
+    "### features_train and features_test are the features for the training\n",
+    "### and testing datasets, respectively\n",
+    "### labels_train and labels_test are the corresponding item labels\n",
+    "features_train, features_test, labels_train, labels_test = preprocess()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#########################################################\n",
+    "### your code goes here ###\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "clf = SVC(kernel='linear')\n",
+    "\n",
+    "t0 = time()\n",
+    "clf.fit(features_train, labels_train)\n",
+    "print 'the fitting takes: ', round(time() - t0), 's'\n",
+    "\n",
+    "t1 = time()\n",
+    "pre = clf.predict(features_test)\n",
+    "print 'the predict: ', round(time() - t1), 's'\n",
+    "\n",
+    "acc = accuracy_score(pre, labels_test)\n",
+    "print acc\n",
+    "\n",
+    "#########################################################\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A very good rate, but also very slow. Let's try some another way to speed it up."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of Chris training emails: 7936\n",
+      "no. of Sara training emails: 7884\n",
+      "the fitting takes:  0.0 s\n",
+      "the predict:  1.0 s\n",
+      "0.884527872582\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load svm_author_id.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "\"\"\"\n",
+    "    This is the code to accompany the Lesson 2 (SVM) mini-project.\n",
+    "\n",
+    "    Use a SVM to identify emails from the Enron corpus by their authors:\n",
+    "    Sara has label 0\n",
+    "    Chris has label 1\n",
+    "\"\"\"\n",
+    "\n",
+    "import sys\n",
+    "from time import time\n",
+    "sys.path.append(\"../tools/\")\n",
+    "from email_preprocess import preprocess\n",
+    "\n",
+    "\n",
+    "### features_train and features_test are the features for the training\n",
+    "### and testing datasets, respectively\n",
+    "### labels_train and labels_test are the corresponding item labels\n",
+    "features_train, features_test, labels_train, labels_test = preprocess()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#########################################################\n",
+    "### your code goes here ###\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# use 1% of data\n",
+    "\n",
+    "features_train = features_train[:len(features_train)/100]\n",
+    "labels_train = labels_train[:len(labels_train)/100]\n",
+    "\n",
+    "clf = SVC(kernel='linear')\n",
+    "\n",
+    "t0 = time()\n",
+    "clf.fit(features_train, labels_train)\n",
+    "print 'the fitting takes: ', round(time() - t0), 's'\n",
+    "\n",
+    "t1 = time()\n",
+    "pre = clf.predict(features_test)\n",
+    "print 'the predict: ', round(time() - t1), 's'\n",
+    "\n",
+    "acc = accuracy_score(pre, labels_test)\n",
+    "print acc\n",
+    "\n",
+    "\n",
+    "#########################################################\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
