--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -271,6 +271,500 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a tradeoff between speed and accuracy. Let's try another kind of SVM."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of Chris training emails: 7936\n",
+      "no. of Sara training emails: 7884\n",
+      "the fitting takes:  0.0 s\n",
+      "the predict:  1.0 s\n",
+      "0.616040955631\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load svm_author_id.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "\"\"\"\n",
+    "    This is the code to accompany the Lesson 2 (SVM) mini-project.\n",
+    "\n",
+    "    Use a SVM to identify emails from the Enron corpus by their authors:\n",
+    "    Sara has label 0\n",
+    "    Chris has label 1\n",
+    "\"\"\"\n",
+    "\n",
+    "import sys\n",
+    "from time import time\n",
+    "sys.path.append(\"../tools/\")\n",
+    "from email_preprocess import preprocess\n",
+    "\n",
+    "\n",
+    "### features_train and features_test are the features for the training\n",
+    "### and testing datasets, respectively\n",
+    "### labels_train and labels_test are the corresponding item labels\n",
+    "features_train, features_test, labels_train, labels_test = preprocess()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#########################################################\n",
+    "### your code goes here ###\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "features_train = features_train[:len(features_train)/100]\n",
+    "labels_train = labels_train[:len(labels_train)/100]\n",
+    "\n",
+    "clf = SVC(kernel='rbf')\n",
+    "\n",
+    "t0 = time()\n",
+    "clf.fit(features_train, labels_train)\n",
+    "print 'the fitting takes: ', round(time() - t0), 's'\n",
+    "\n",
+    "t1 = time()\n",
+    "pre = clf.predict(features_test)\n",
+    "print 'the predict: ', round(time() - t1), 's'\n",
+    "\n",
+    "acc = accuracy_score(pre, labels_test)\n",
+    "print acc\n",
+    "\n",
+    "\n",
+    "#########################################################\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is not a very good accuracy rate. Let's play around with the parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of Chris training emails: 7936\n",
+      "no. of Sara training emails: 7884\n",
+      "the fitting takes:  134.0 s\n",
+      "the predict:  14.0 s\n",
+      "0.990898748578\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load svm_author_id.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "\"\"\"\n",
+    "    This is the code to accompany the Lesson 2 (SVM) mini-project.\n",
+    "\n",
+    "    Use a SVM to identify emails from the Enron corpus by their authors:\n",
+    "    Sara has label 0\n",
+    "    Chris has label 1\n",
+    "\"\"\"\n",
+    "\n",
+    "import sys\n",
+    "from time import time\n",
+    "sys.path.append(\"../tools/\")\n",
+    "from email_preprocess import preprocess\n",
+    "\n",
+    "\n",
+    "### features_train and features_test are the features for the training\n",
+    "### and testing datasets, respectively\n",
+    "### labels_train and labels_test are the corresponding item labels\n",
+    "features_train, features_test, labels_train, labels_test = preprocess()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#########################################################\n",
+    "### your code goes here ###\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "clf = SVC(kernel='rbf', C = 10000)\n",
+    "\n",
+    "t0 = time()\n",
+    "clf.fit(features_train, labels_train)\n",
+    "print 'the fitting takes: ', round(time() - t0), 's'\n",
+    "\n",
+    "t1 = time()\n",
+    "pre = clf.predict(features_test)\n",
+    "print 'the predict: ', round(time() - t1), 's'\n",
+    "\n",
+    "acc = accuracy_score(pre, labels_test)\n",
+    "print acc\n",
+    "\n",
+    "\n",
+    "#########################################################\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Under 1% testing data:\n",
+    "\n",
+    "|C|Accuracy|Time|\n",
+    "|---|---|---|\n",
+    "|10|0.616040955631|0s|\n",
+    "|100|0.616040955631|0s|\n",
+    "|1000|0.821387940842|0s|\n",
+    "|100000|0.892491467577|0s|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 1])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.predict(features_test[[10, 26, 50]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1758"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(pre == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "877"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(pre == 1).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of Chris training emails: 7936\n",
+      "no. of Sara training emails: 7884\n",
+      "the fitting takes:  85.0 s\n",
+      "the test takes:  0.0 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.97724687144482369"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# %load dt_author_id.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "\"\"\"\n",
+    "    This is the code to accompany the Lesson 3 (decision tree) mini-project.\n",
+    "\n",
+    "    Use a Decision Tree to identify emails from the Enron corpus by author:\n",
+    "    Sara has label 0\n",
+    "    Chris has label 1\n",
+    "\"\"\"\n",
+    "\n",
+    "import sys\n",
+    "from time import time\n",
+    "sys.path.append(\"../tools/\")\n",
+    "from email_preprocess import preprocess\n",
+    "\n",
+    "\n",
+    "### features_train and features_test are the features for the training\n",
+    "### and testing datasets, respectively\n",
+    "### labels_train and labels_test are the corresponding item labels\n",
+    "features_train, features_test, labels_train, labels_test = preprocess()\n",
+    "\n",
+    "\n",
+    "#########################################################\n",
+    "### your code goes here ###\n",
+    "\n",
+    "from sklearn import tree\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "clf = tree.DecisionTreeClassifier(min_samples_split=40)\n",
+    "\n",
+    "t0 = time()\n",
+    "clf.fit(features_train, labels_train)\n",
+    "print \"the fitting takes: \", round(time() - t0), 's'\n",
+    "\n",
+    "t1 = time()\n",
+    "pre = clf.predict(features_test)\n",
+    "print \"the test takes: \", round(time() - t1), 's'\n",
+    "\n",
+    "accuracy_score(pre, labels_test)\n",
+    "\n",
+    "#########################################################\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15820, 3785)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change the percentile in email.preprocess.py from 10 to 1 to adjust the features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of Chris training emails: 7936\n",
+      "no. of Sara training emails: 7884\n",
+      "the fitting takes:  65.0 s\n",
+      "the test takes:  0.0 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.97781569965870307"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# %load dt_author_id.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "\"\"\"\n",
+    "    This is the code to accompany the Lesson 3 (decision tree) mini-project.\n",
+    "\n",
+    "    Use a Decision Tree to identify emails from the Enron corpus by author:\n",
+    "    Sara has label 0\n",
+    "    Chris has label 1\n",
+    "\"\"\"\n",
+    "\n",
+    "import sys\n",
+    "from time import time\n",
+    "sys.path.append(\"../tools/\")\n",
+    "from email_preprocess import preprocess\n",
+    "\n",
+    "\n",
+    "### features_train and features_test are the features for the training\n",
+    "### and testing datasets, respectively\n",
+    "### labels_train and labels_test are the corresponding item labels\n",
+    "features_train, features_test, labels_train, labels_test = preprocess()\n",
+    "\n",
+    "\n",
+    "#########################################################\n",
+    "### your code goes here ###\n",
+    "\n",
+    "from sklearn import tree\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "clf = tree.DecisionTreeClassifier(min_samples_split=40)\n",
+    "\n",
+    "t0 = time()\n",
+    "clf.fit(features_train, labels_train)\n",
+    "print \"the fitting takes: \", round(time() - t0), 's'\n",
+    "\n",
+    "t1 = time()\n",
+    "pre = clf.predict(features_test)\n",
+    "print \"the test takes: \", round(time() - t1), 's'\n",
+    "\n",
+    "accuracy_score(pre, labels_test)\n",
+    "\n",
+    "#########################################################\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15820, 3785)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of Chris training emails: 7936\n",
+      "no. of Sara training emails: 7884\n"
+     ]
+    }
+   ],
+   "source": [
+    "from email_preprocess import preprocess\n",
+    "features_train, features_test, labels_train, labels_test = preprocess()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15820, 3785)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of Chris training emails: 7936\n",
+      "no. of Sara training emails: 7884\n",
+      "the fitting takes:  4.0 s\n",
+      "the test takes:  0.0 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9670079635949943"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%run /Users/guanrongfu/ml-practice/tools/email_preprocess.py\n",
+    "features_train, features_test, labels_train, labels_test = preprocess()\n",
+    "from sklearn import tree\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "clf = tree.DecisionTreeClassifier(min_samples_split=40)\n",
+    "\n",
+    "t0 = time()\n",
+    "clf.fit(features_train, labels_train)\n",
+    "print \"the fitting takes: \", round(time() - t0), 's'\n",
+    "\n",
+    "t1 = time()\n",
+    "pre = clf.predict(features_test)\n",
+    "print \"the test takes: \", round(time() - t1), 's'\n",
+    "\n",
+    "accuracy_score(pre, labels_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
