feat: Add KNN and Random Forest

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -765,6 +765,190 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K Nearest Neighbors (KNN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of Chris training emails: 7936\n",
+      "no. of Sara training emails: 7884\n",
+      "the fitting takes:  5.0 s\n",
+      "the predict:  167.0 s\n",
+      "0.857224118316\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load knn_author_id.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "\"\"\"\n",
+    "    This is the code to accompany the Lesson 2 (SVM) mini-project.\n",
+    "\n",
+    "    Use a SVM to identify emails from the Enron corpus by their authors:\n",
+    "    Sara has label 0\n",
+    "    Chris has label 1\n",
+    "\"\"\"\n",
+    "\n",
+    "import sys\n",
+    "from time import time\n",
+    "sys.path.append(\"../tools/\")\n",
+    "from email_preprocess import preprocess\n",
+    "\n",
+    "\n",
+    "### features_train and features_test are the features for the training\n",
+    "### and testing datasets, respectively\n",
+    "### labels_train and labels_test are the corresponding item labels\n",
+    "features_train, features_test, labels_train, labels_test = preprocess()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#########################################################\n",
+    "### your code goes here ###\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "neigh = KNeighborsClassifier()\n",
+    "\n",
+    "t0 = time()\n",
+    "neigh.fit(features_train, labels_train)\n",
+    "print 'the fitting takes: ', round(time() - t0), 's'\n",
+    "\n",
+    "t1 = time()\n",
+    "pre = neigh.predict(features_test)\n",
+    "print 'the predict: ', round(time() - t1), 's'\n",
+    "\n",
+    "acc = accuracy_score(pre, labels_test)\n",
+    "print acc\n",
+    "\n",
+    "\n",
+    "#########################################################\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "KNN has a function that the previous three models doesn't. It is the predict_proba() function. It is designed to deal with multi-class predictions. It will return probability estimates for the test data X."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1. ,  0. ],\n",
+       "       [ 0.6,  0.4],\n",
+       "       [ 0. ,  1. ],\n",
+       "       ..., \n",
+       "       [ 0. ,  1. ],\n",
+       "       [ 0.6,  0.4],\n",
+       "       [ 0.6,  0.4]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neigh.predict_proba(features_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no. of Chris training emails: 7936\n",
+      "no. of Sara training emails: 7884\n",
+      "the fitting takes:  6.0 s\n",
+      "the predict:  0.0 s\n",
+      "0.993174061433\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %load rf_author_id.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "\"\"\"\n",
+    "    This is the code to accompany the Lesson 2 (SVM) mini-project.\n",
+    "\n",
+    "    Use a SVM to identify emails from the Enron corpus by their authors:\n",
+    "    Sara has label 0\n",
+    "    Chris has label 1\n",
+    "\"\"\"\n",
+    "\n",
+    "import sys\n",
+    "from time import time\n",
+    "sys.path.append(\"../tools/\")\n",
+    "from email_preprocess import preprocess\n",
+    "\n",
+    "\n",
+    "### features_train and features_test are the features for the training\n",
+    "### and testing datasets, respectively\n",
+    "### labels_train and labels_test are the corresponding item labels\n",
+    "features_train, features_test, labels_train, labels_test = preprocess()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#########################################################\n",
+    "### your code goes here ###\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "clf = RandomForestClassifier()\n",
+    "\n",
+    "t0 = time()\n",
+    "clf.fit(features_train, labels_train)\n",
+    "print 'the fitting takes: ', round(time() - t0), 's'\n",
+    "\n",
+    "t1 = time()\n",
+    "pre = clf.predict(features_test)\n",
+    "print 'the predict: ', round(time() - t1), 's'\n",
+    "\n",
+    "acc = accuracy_score(pre, labels_test)\n",
+    "print acc\n",
+    "\n",
+    "\n",
+    "#########################################################\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adaboost"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
