chore: Update the formatting

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -4,6 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Mini-Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Table of Content\n",
+    "\n",
+    "* [Setup](#setup)\n",
+    "* [Naive Bayes](#naive-bayes)\n",
+    "* [SVM](#svm)\n",
+    "* [Decision Tree](#decision-tree)\n",
+    "* [KNN](#knn)\n",
+    "* [Random Forest](#random-forest)\n",
+    "* [Adaboost](#adaboost)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id = 'setup'></a>\n",
     "# Setup"
    ]
   },
@@ -43,6 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id = 'naive-bayes'></a>\n",
     "# Naive Bayes"
    ]
   },
@@ -127,6 +151,14 @@
    "metadata": {},
    "source": [
     "`sklearn.metrics.accuracy_score()` is much faster than `clf.scores()`!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id = 'svm'></a>\n",
+    "# SVM"
    ]
   },
   {
@@ -492,6 +524,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id = 'decision-tree'></a>\n",
+    "# Decision Tree"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -768,6 +808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id = 'knn'></a>\n",
     "# K Nearest Neighbors (KNN)"
    ]
   },
@@ -873,6 +914,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id = 'random-forest'></a>\n",
     "# Random Forest"
    ]
   },
@@ -945,6 +987,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id = 'adaboost'></a>\n",
     "# Adaboost"
    ]
   },
@@ -1014,12 +1057,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
