--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -14,12 +14,13 @@
     "## Table of Content\n",
     "\n",
     "* [Setup](#setup)\n",
-    "* [Naive Bayes](#naive-bayes)\n",
-    "* [SVM](#svm)\n",
-    "* [Decision Tree](#decision-tree)\n",
-    "* [KNN](#knn)\n",
-    "* [Random Forest](#random-forest)\n",
-    "* [Adaboost](#adaboost)"
+    "* Supervised Learning\n",
+    "    * [Naive Bayes](#naive-bayes)\n",
+    "    * [SVM](#svm)\n",
+    "    * [Decision Tree](#decision-tree)\n",
+    "    * [KNN](#knn)\n",
+    "    * [Random Forest](#random-forest)\n",
+    "    * [Adaboost](#adaboost)"
    ]
   },
   {
@@ -1059,6 +1060,106 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Explore Enron Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load explore_enron_data.py\n",
+    "#!/usr/bin/python\n",
+    "\n",
+    "\"\"\" \n",
+    "    Starter code for exploring the Enron dataset (emails + finances);\n",
+    "    loads up the dataset (pickled dict of dicts).\n",
+    "\n",
+    "    The dataset has the form:\n",
+    "    enron_data[\"LASTNAME FIRSTNAME MIDDLEINITIAL\"] = { features_dict }\n",
+    "\n",
+    "    {features_dict} is a dictionary of features associated with that person.\n",
+    "    You should explore features_dict as part of the mini-project,\n",
+    "    but here's an example to get you started:\n",
+    "\n",
+    "    enron_data[\"SKILLING JEFFREY K\"][\"bonus\"] = 5600000\n",
+    "    \n",
+    "\"\"\"\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "enron_data = pickle.load(open(\"../final_project/final_project_dataset.pkl\", \"r\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "146"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(enron_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in enron_data:\n",
+    "    print len(enron_data[key])\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for key in enron_data:\n",
+    "    if enron_data[key]['poi']:\n",
+    "        count += 1\n",
+    "print count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
