feat: Define a function to update the name format

--- a/Machine-Learning/Mini-Project.ipynb
+++ b/Machine-Learning/Mini-Project.ipynb
@@ -1065,6 +1065,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read the Enron Email Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
@@ -1094,6 +1101,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check how many people are in the dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
@@ -1111,6 +1125,13 @@
    ],
    "source": [
     "len(enron_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check how many features for each person."
    ]
   },
   {
@@ -1133,8 +1154,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How many people in the dataset actually has person of interest."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1152,6 +1180,230 @@
     "        count += 1\n",
     "print count"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a text file containing all the POI names. Check how many people are in it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('poi_names.txt', 'r') as f:\n",
+    "    f.readline()\n",
+    "    names = f.read()\n",
+    "    names = names.split('\\n')\n",
+    "    names = names[1:len(names)-1]\n",
+    "    \n",
+    "len(names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The name within the dataset following certain format: 'LAST NAME FIRST NAME' or \n",
+    "'LAST NAME FIRST NAME MIDDLE INITIAL'. I am going to check the information for some people. I will write a function to transfer the name to the format I want."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_name(name):\n",
+    "    new_name = name.upper()\n",
+    "    new_name = new_name.split(' ')\n",
+    "    \n",
+    "    if len(new_name) == 2:\n",
+    "        new_name = list(reversed(new_name))\n",
+    "        new_name = ' '.join(new_name)\n",
+    "    elif len(new_name) == 3:\n",
+    "        new_order = [2, 0, 1]\n",
+    "        new_name = [new_name[i] for i in new_order]\n",
+    "        new_name = ' '.join(new_name)\n",
+    "    return new_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SKILLING JEFFREY K\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = update_name('Jeffrey K Skilling')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PRENTICE JAMES'"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = update_name('James Prentice')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bonus': 'NaN',\n",
+       " 'deferral_payments': 564348,\n",
+       " 'deferred_income': 'NaN',\n",
+       " 'director_fees': 'NaN',\n",
+       " 'email_address': 'james.prentice@enron.com',\n",
+       " 'exercised_stock_options': 886231,\n",
+       " 'expenses': 'NaN',\n",
+       " 'from_messages': 'NaN',\n",
+       " 'from_poi_to_this_person': 'NaN',\n",
+       " 'from_this_person_to_poi': 'NaN',\n",
+       " 'loan_advances': 'NaN',\n",
+       " 'long_term_incentive': 'NaN',\n",
+       " 'other': 'NaN',\n",
+       " 'poi': False,\n",
+       " 'restricted_stock': 208809,\n",
+       " 'restricted_stock_deferred': 'NaN',\n",
+       " 'salary': 'NaN',\n",
+       " 'shared_receipt_with_poi': 'NaN',\n",
+       " 'to_messages': 'NaN',\n",
+       " 'total_payments': 564348,\n",
+       " 'total_stock_value': 1095040}"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enron_data[name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bonus': 1200000,\n",
+       " 'deferral_payments': 27610,\n",
+       " 'deferred_income': -144062,\n",
+       " 'director_fees': 'NaN',\n",
+       " 'email_address': 'wes.colwell@enron.com',\n",
+       " 'exercised_stock_options': 'NaN',\n",
+       " 'expenses': 16514,\n",
+       " 'from_messages': 40,\n",
+       " 'from_poi_to_this_person': 240,\n",
+       " 'from_this_person_to_poi': 11,\n",
+       " 'loan_advances': 'NaN',\n",
+       " 'long_term_incentive': 'NaN',\n",
+       " 'other': 101740,\n",
+       " 'poi': True,\n",
+       " 'restricted_stock': 698242,\n",
+       " 'restricted_stock_deferred': 'NaN',\n",
+       " 'salary': 288542,\n",
+       " 'shared_receipt_with_poi': 1132,\n",
+       " 'to_messages': 1758,\n",
+       " 'total_payments': 1490344,\n",
+       " 'total_stock_value': 698242}"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = update_name('Wesley Colwell')\n",
+    "enron_data[name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
